Not freed memory blocks after using viewport shading type: "rendered" #81459

Closed
opened 2020-10-05 18:29:02 +02:00 by Pedro A. · 7 comments
Contributor

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 451.67

Blender Version
Broken: version: 2.90.1, branch: master, commit date: 2020-09-23 06:43, hash: 3e85bb34d0

Short description of error
Blender show message 'Not freed memory block' after use viewport in mode 'Rendered'

Exact steps for others to reproduce the error
Start Blender from command line with --debug-memory enabled.
Select Cycles as Render engine active.
Change viewport shading mode to Rendered for a few seconds.
Change shading type to 'Solid.
Close Blender.
After closing, console show this message:

Blender quit
Error: Not freed memory blocks: 4, total unfreed memory 0.000385 MB
GPUShader len: 32 000002622F885CD8
GPUShaderInterface len: 216 0000026237862078
GPUShaderInterface batches len: 128 000002623B514208
name_buffer len: 28 000002622F8856B8
**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 451.67 **Blender Version** Broken: version: 2.90.1, branch: master, commit date: 2020-09-23 06:43, hash: `3e85bb34d0` **Short description of error** Blender show message 'Not freed memory block' after use viewport in mode 'Rendered' **Exact steps for others to reproduce the error** Start Blender from command line with --debug-memory enabled. Select Cycles as Render engine active. Change viewport shading mode to Rendered for a few seconds. Change shading type to 'Solid. Close Blender. After closing, console show this message: ``` Blender quit Error: Not freed memory blocks: 4, total unfreed memory 0.000385 MB GPUShader len: 32 000002622F885CD8 GPUShaderInterface len: 216 0000026237862078 GPUShaderInterface batches len: 128 000002623B514208 name_buffer len: 28 000002622F8856B8 ```
Author
Contributor

Added subscriber: @povmaniac

Added subscriber: @povmaniac
Ankit Meel changed title from Not freed memory blocks after use viewport shading type 'MATERIAL' to Not freed memory blocks after using viewport shading type: "rendered" 2020-10-05 22:31:14 +02:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @ankitm

Added subscriber: @ankitm
Member

List of all leaks after removing the suppression file: P1682

List of all leaks after removing the suppression file: [P1682](https://archive.blender.org/developer/P1682.txt)
Jeroen Bakker self-assigned this 2020-10-06 08:13:28 +02:00

This issue was referenced by dac242b993

This issue was referenced by dac242b993c5f33898de001c9d40fd645afcc4e9

This issue was referenced by 7d0139f417

This issue was referenced by 7d0139f41751efab772942abc22f988aa4b44b1e
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#81459
No description provided.