Fix T81459: Memory Leak Cycles Rendered Viewport

The external engine in the draw manager wasn't registered correctly.
This did not free the resources after the external engine was used.